fix: BlockCrushingRecipe not supporting wildcard falling block